apps/vault/ressources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: vault.v34l.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
  tls:
    - hosts:
      - core.vault.v34l.com
      secretName: vault-secret
